# deploy3dmedv1

./: .env  docker-compose.yml
backend/: DS_Store  Dockerfile  README.md  alembic.ini  cookies.pkl  pyproject.toml  requirements.txt
backend/app/: backend.code-workspace  config.py  main.py  schema.py
backend/app/auto_download/: auto_download_service.py  config.py  function.py
backend/app/client_download/: client_download.py  config.py
backend/app/controller/: admin.py  authentication.py  users.py
backend/app/hans3d/: __init__.py  config.py  connect.py  han3d_service.py
backend/app/middleware/: config.py  middleware.py
backend/app/model/: __init__.py  info_data.py  person.py  users.py
backend/app/repository/: auth_repo.py  base_repo.py  info_data.py  role.py  user_role.py  users.py
backend/app/service/: auth_service.py  info_data_service.py  person_service.py  role_service.py  user_service.py
backend/migrations/versions/: 2e23024abd44_new_migration.py
